--- a/css/main.css
+++ b/css/main.css
@@ -614,6 +614,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #ffffff;
   border-radius: 5px;
   position: absolute;
+  padding: 40px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -644,4 +645,175 @@ background-color: #2196F3;
 opacity: 0;
 visibility: hidden;
 pointer-events: none;
+}
+.modal-title{
+font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+margin-bottom: 12px;
+}
+.modal-field{
+  margin-bottom: 10px;
+}
+.input-wrap{
+  position: relative;
+}
+.input-label{
+font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+color: #757575;
+margin-bottom: 4px;
+}
+.modal-input{
+width: 100%;
+height: 40px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+outline: transparent;
+padding-left: 30px;
+color: #2F303A;
+font-size: 14px;
+ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input::placeholder,
+.modal-text::placeholder{
+font-size: 13px;
+color: #757575;
+}
+.modal-input:focus{
+  border-color: #2196F3;
+}
+.modal-input:focus+.modal-input-icon{
+  fill: #2196F3;
+}
+.modal-input:not(:focus):not(:placeholder-shown):valid{
+  background-color: rgb(124, 235, 124);
+}
+.modal-input:not(:focus):not(:placeholder-shown):invalid{
+  background-color:rgb(190, 107, 107);
+}
+.modal-input-icon{
+  position: absolute;
+  left: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.modal-text{
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+}
+.check-text{
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: #757575;
+display: flex;
+text-align: center;
+margin-bottom: 30px;
+}
+.check-text span{
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 3px;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.input-check:checked+ .check-text span{
+  background-color: #2196F3;
+  border-color: transparent;
+  fill: #FFFFFF;
+}
+.input-check:focus+ .check-text span{
+  border-color:#2196F3;
+}
+.modal-btn{
+font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+background-color:#2196F3;
+color: #FFFFFF;
+border: 1px solid #2196F3;
+border-radius: 4px;
+width: 200px;
+height: 50px;
+margin: 0 auto;
+display: block;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus{
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.umovy-link{
+text-decoration-line: underline;
+margin-left: 6px;
+color: #2196F3;
+}
+.online-title{
+font-weight: 700;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-bottom: 20px;
+}
+.online-input{
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px 16px;
+}
+.send-btn{
+width: 200px;
+height: 50px;
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border-color: #2196F3;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+display: block;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+position: relative;
+}
+.online-wrap{
+  padding-top: 72px;
+  padding-bottom: 94px;
+}
+.online-form{
+  display: flex;
+  gap: 12px;
+}
+.send-icon{
+position: absolute;
+fill: #FFFFFF;
+margin-left: 10px;
+}
+.footer-online {
+  display: flex;
 }
