--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,7 @@ padding-bottom: 60px;
 .footer>.container{
   display: flex;
   align-items:baseline;
-  gap: 70px;
+justify-content: center;
 }
 .footer-logo {
 font-family: 'Raleway';
@@ -458,6 +458,9 @@ font-size: 14px;
 line-height: 1.71;
 
 color: rgba(255, 255, 255, 0.6);
+}
+.footer-soc{
+  margin-left: 70px;
 }
 .footer-soc-title{
 font-weight: 700;
@@ -497,6 +500,56 @@ fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-soc-link:focus {
   background-color: #2196F3;
   fill: #FFFFFF;
+}
+.online-wrap{
+  margin-left: 93px;
+}
+.online-title{
+font-weight: 700;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-bottom: 20px;
+}
+.online-input{
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px 16px;
+}
+.send-btn{
+padding: 10px 28px;
+background: #2196F3;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border-color: #2196F3;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+
+}
+
+.online-form{
+  display: flex;
+  gap: 12px;
+}
+.send-icon{
+  
+fill: #FFFFFF;
+margin-left: 10px;
+}
+.footer-online {
+  display: flex;
 }
 /* -----portfolio---- */
 .portfol-sek{ 
@@ -718,7 +771,7 @@ letter-spacing: 0.03em;
 color: #757575;
 display: flex;
 text-align: center;
-margin-bottom: 30px;
+
 }
 .check-text span{
   width: 16px;
@@ -739,6 +792,9 @@ margin-bottom: 30px;
 .input-check:focus+ .check-text span{
   border-color:#2196F3;
 }
+.modal-btn-befor{
+  margin-bottom: 30px;
+}
 .modal-btn{
 font-weight: 700;
 font-size: 16px;
@@ -750,8 +806,7 @@ background-color:#2196F3;
 color: #FFFFFF;
 border: 1px solid #2196F3;
 border-radius: 4px;
-width: 200px;
-height: 50px;
+padding: 10px 52px;
 margin: 0 auto;
 display: block;
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -765,55 +820,4 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 text-decoration-line: underline;
 margin-left: 6px;
 color: #2196F3;
-}
-.online-title{
-font-weight: 700;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #FFFFFF;
-margin-bottom: 20px;
-}
-.online-input{
-  width: 358px;
-  height: 50px;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  padding: 15px 16px;
-}
-.send-btn{
-width: 200px;
-height: 50px;
-background: #2196F3;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-border-color: #2196F3;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.88;
-display: block;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-color: #FFFFFF;
-position: relative;
-}
-.online-wrap{
-  padding-top: 72px;
-  padding-bottom: 94px;
-}
-.online-form{
-  display: flex;
-  gap: 12px;
-}
-.send-icon{
-position: absolute;
-fill: #FFFFFF;
-margin-left: 10px;
-}
-.footer-online {
-  display: flex;
 }
