--- a/css/main.css
+++ b/css/main.css
@@ -460,7 +460,7 @@ line-height: 1.71;
 color: rgba(255, 255, 255, 0.6);
 }
 .footer-soc{
-  margin-left: 70px;
+  margin-left: auto;
 }
 .footer-soc-title{
 font-weight: 700;
